infra/services/database/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels: 
    app: postgres
  namespace: development
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata: 
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: ghcr.io/sofushn/ruc-workshop-dds-project:database-latest
          ports:
            - containerPort: 5432
