infra/services/database/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels: 
    app: postgres
  namespace: development
spec:
  replicas: 3
  selector:
    matchLabels:
      app: postgres
  template:
    metadata: 
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
