infra/services/database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: development
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
