infra/services/database/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: development
spec:
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: postgres-service
            port: 
              number: 80
